--- a/logging.cabal
+++ b/logging.cabal
@@ -20,6 +20,9 @@ executable logging
   other-modules:       Logger, LogReader
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , PSQueue
+                     , text
+                     , transformers
 
 library
   hs-source-dirs:      src
