--- a/logging.cabal
+++ b/logging.cabal
@@ -20,7 +20,7 @@ executable logging
   other-modules:       Logger, LogReader
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                     , PSQueue
+                     , time
                      , pqueue
                      , text
                      , transformers
@@ -30,7 +30,7 @@ library
   exposed-modules:     Logger, LogReader
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , time
                      , pqueue
-                     , PSQueue
                      , text
                      , transformers
